--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.3",
+    "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "resend": "^4.0.0",
+    "svix": "^1.15.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
