--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.3",
     "@supabase/supabase-js": "^2.39.0",
+    "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
