--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.3",
+    "@lemonsqueezy/lemonsqueezy.js": "^2.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.561.0",
